update vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,85 @@
 {
-  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat"
+  "files.associations": {
+      "ostream": "cpp",
+      "iostream": "cpp",
+      "vector": "cpp",
+      "thread": "cpp",
+      "string": "cpp",
+      "xstring": "cpp",
+      "istream": "cpp",
+      "cstdlib": "cpp",
+      "algorithm": "cpp",
+      "atomic": "cpp",
+      "bit": "cpp",
+      "cctype": "cpp",
+      "charconv": "cpp",
+      "chrono": "cpp",
+      "clocale": "cpp",
+      "cmath": "cpp",
+      "compare": "cpp",
+      "concepts": "cpp",
+      "cstddef": "cpp",
+      "cstdint": "cpp",
+      "cstdio": "cpp",
+      "cstring": "cpp",
+      "ctime": "cpp",
+      "cwchar": "cpp",
+      "deque": "cpp",
+      "exception": "cpp",
+      "format": "cpp",
+      "forward_list": "cpp",
+      "initializer_list": "cpp",
+      "iomanip": "cpp",
+      "ios": "cpp",
+      "iosfwd": "cpp",
+      "iterator": "cpp",
+      "limits": "cpp",
+      "list": "cpp",
+      "locale": "cpp",
+      "map": "cpp",
+      "memory": "cpp",
+      "mutex": "cpp",
+      "new": "cpp",
+      "optional": "cpp",
+      "queue": "cpp",
+      "random": "cpp",
+      "ratio": "cpp",
+      "set": "cpp",
+      "sstream": "cpp",
+      "stdexcept": "cpp",
+      "stop_token": "cpp",
+      "streambuf": "cpp",
+      "system_error": "cpp",
+      "tuple": "cpp",
+      "type_traits": "cpp",
+      "typeinfo": "cpp",
+      "unordered_map": "cpp",
+      "unordered_set": "cpp",
+      "utility": "cpp",
+      "xfacet": "cpp",
+      "xhash": "cpp",
+      "xiosbase": "cpp",
+      "xlocale": "cpp",
+      "xlocbuf": "cpp",
+      "xlocinfo": "cpp",
+      "xlocmes": "cpp",
+      "xlocmon": "cpp",
+      "xlocnum": "cpp",
+      "xloctime": "cpp",
+      "xmemory": "cpp",
+      "xstddef": "cpp",
+      "xtr1common": "cpp",
+      "xtree": "cpp",
+      "xutility": "cpp",
+      "array": "cpp",
+      "*.tcc": "cpp",
+      "cstdarg": "cpp",
+      "cwctype": "cpp",
+      "functional": "cpp",
+      "memory_resource": "cpp",
+      "numeric": "cpp",
+      "string_view": "cpp",
+      "numbers": "cpp",
+      "csignal": "cpp"
+  }
 }
