--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,9 @@
     "numbers": "cpp",
     "csignal": "cpp",
     "ranges": "cpp",
-    "span": "cpp"
+    "span": "cpp",
+    "condition_variable": "cpp",
+    "semaphore": "cpp",
+    "variant": "cpp"
   }
 }
